--- a/AryanITC.Core/AryanITC.Core.csproj
+++ b/AryanITC.Core/AryanITC.Core.csproj
@@ -9,6 +9,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Elmah.MVC" Version="2.1.2" />
+    <PackageReference Include="ElmahCore" Version="2.1.2" />
     <PackageReference Include="HtmlSanitizer" Version="6.0.441" />
     <PackageReference Include="IPE.Smsir.NetCore.TPL" Version="1.2.0" />
     <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.7" />
