--- a/AryanITC.Web/AryanITC.Web.csproj
+++ b/AryanITC.Web/AryanITC.Web.csproj
@@ -232,12 +232,16 @@
     <None Include="wwwroot\fonts\iranyekan_fa\woff2\iranyekanwebregular.woff2" />
     <None Include="wwwroot\fonts\vazir\Vazir-Bold.woff2" />
     <None Include="wwwroot\fonts\vazir\Vazir.woff2" />
+    <None Include="wwwroot\js\bootstrap.js" />
     <None Include="wwwroot\js\classie.js" />
     <None Include="wwwroot\js\html5element.js" />
     <None Include="wwwroot\js\html5shiv.js" />
     <None Include="wwwroot\js\jquery-scrolltofixed.js" />
+    <None Include="wwwroot\js\jquery.1.8.3.min.js" />
     <None Include="wwwroot\js\jquery.easing.1.3.js" />
     <None Include="wwwroot\js\jquery.isotope.js" />
+    <None Include="wwwroot\js\jquery.js" />
+    <None Include="wwwroot\js\jquery.min.js" />
     <None Include="wwwroot\js\respond-1.1.0.min.js" />
     <None Include="wwwroot\js\wow.js" />
     <None Include="wwwroot\UserPanel\.git\COMMIT_EDITMSG" />
