--- a/AryanITC.Domain/AryanITC.Domain.csproj
+++ b/AryanITC.Domain/AryanITC.Domain.csproj
@@ -5,6 +5,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <EmbeddedResource Remove="Resources\ViewModels\Service\FilterServiceViewModel.fa-IR.resx" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Resources\ViewModels\Service\FilterServiceViewModel.fa-IR.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>FilterServiceViewModel.Designer.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Elmah.MVC" Version="2.1.2" />
     <PackageReference Include="ElmahCore" Version="2.1.2" />
     <PackageReference Include="HtmlSanitizer" Version="6.0.441" />
@@ -26,6 +37,12 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
     <PackageReference Include="System.Security.Claims" Version="4.3.0" />
+    <PackageReference Include="xunit" Version="2.4.2" />
+    <PackageReference Include="xunit.abstractions" Version="2.0.3" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
@@ -34,12 +51,26 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>EmailActiveAccountViewModel.resx</DependentUpon>
     </Compile>
+    <Compile Update="Resources\ViewModels\Service\CreateServiceViewModel.fa-IR.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>CreateServiceViewModel.fa-IR.resx</DependentUpon>
+    </Compile>
+    <Compile Update="Resources\ViewModels\Service\FilterServiceViewModel.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>FilterServiceViewModel.fa-IR.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Update="Resources\ViewModels\Account\EmailActiveAccountViewModel.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>EmailActiveAccountViewModel.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Resources\ViewModels\Service\CreateServiceViewModel.fa-IR.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>CreateServiceViewModel.fa-IR.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
 
