--- a/AryanITC.Web/AryanITC.Web.csproj
+++ b/AryanITC.Web/AryanITC.Web.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <Content Remove="wwwroot\fonts\IranianSans\Fontyab.com.url" />
     <Content Remove="wwwroot\fonts\IranianSans\Fontyab.ir.url" />
+    <Content Remove="wwwroot\js\libscripts.bundle.js" />
   </ItemGroup>
 
   <ItemGroup>
@@ -24,12 +25,11 @@
     <None Include="wwwroot\Admin\assets\bundles\footable.bundle.js" />
     <None Include="wwwroot\Admin\assets\bundles\fullcalendarscripts.bundle.js" />
     <None Include="wwwroot\Admin\assets\bundles\jvectormap.bundle.js" />
-    <None Include="wwwroot\Admin\assets\bundles\knob.bundle.js" />
-    <None Include="wwwroot\Admin\assets\bundles\libscripts.bundle.js" />
-    <None Include="wwwroot\Admin\assets\bundles\mainscripts.bundle.js" />
-    <None Include="wwwroot\Admin\assets\bundles\morrisscripts.bundle.js" />
-    <None Include="wwwroot\Admin\assets\bundles\sparkline.bundle.js" />
-    <None Include="wwwroot\Admin\assets\bundles\vendorscripts.bundle.js" />
+    <None Include="wwwroot\js\knob.bundle.js" />
+    <None Include="wwwroot\js\mainscripts.bundle.js" />
+    <None Include="wwwroot\js\morrisscripts.bundle.js" />
+    <None Include="wwwroot\js\sparkline.bundle.js" />
+    <None Include="wwwroot\js\vendorscripts.bundle.js" />
     <None Include="wwwroot\Admin\assets\fonts\IRANSansWeb.svg" />
     <None Include="wwwroot\Admin\assets\fonts\IRANSansWeb.woff2" />
     <None Include="wwwroot\Admin\assets\fonts\IRANSansWeb_Bold.svg" />
@@ -86,142 +86,6 @@
     <None Include="wwwroot\Admin\assets\js\pages\ui\sortable-nestable.js" />
     <None Include="wwwroot\Admin\assets\js\pages\widgets\infobox\infobox-1.js" />
     <None Include="wwwroot\Admin\assets\js\sweetalert2.all.min.js" />
-    <None Include="wwwroot\Admin\assets\plugins\bootstrap-colorpicker\js\bootstrap-colorpicker.js" />
-    <None Include="wwwroot\Admin\assets\plugins\bootstrap-material-datetimepicker\js\bootstrap-material-datetimepicker.js" />
-    <None Include="wwwroot\Admin\assets\plugins\bootstrap-notify\bootstrap-notify.js" />
-    <None Include="wwwroot\Admin\assets\plugins\bootstrap-tagsinput\bootstrap-tagsinput.js" />
-    <None Include="wwwroot\Admin\assets\plugins\chartjs\Chart.bundle.js" />
-    <None Include="wwwroot\Admin\assets\plugins\chartjs\Chart.bundle.min.js" />
-    <None Include="wwwroot\Admin\assets\plugins\chartjs\polar_area_chart.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\adapters\jquery.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\build-config.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\CHANGES.md" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\ckeditor.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\config.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\af.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\ar.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\az.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\bg.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\bn.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\bs.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\ca.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\cs.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\cy.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\da.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\de-ch.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\de.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\el.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\en-au.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\en-ca.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\en-gb.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\en.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\eo.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\es-mx.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\es.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\et.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\eu.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\fa.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\fi.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\fo.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\fr-ca.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\fr.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\gl.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\gu.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\he.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\hi.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\hr.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\hu.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\id.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\is.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\it.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\ja.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\ka.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\km.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\ko.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\ku.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\lt.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\lv.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\mk.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\mn.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\ms.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\nb.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\nl.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\no.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\oc.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\pl.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\pt-br.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\pt.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\ro.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\ru.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\si.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\sk.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\sl.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\sq.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\sr-latn.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\sr.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\sv.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\th.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\tr.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\tt.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\ug.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\uk.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\vi.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\zh-cn.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\lang\zh.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\LICENSE.md" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\plugins\about\dialogs\about.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\plugins\clipboard\dialogs\paste.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\plugins\dialog\dialogDefinition.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\plugins\link\dialogs\anchor.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\plugins\link\dialogs\link.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\README.md" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\samples\img\logo.svg" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\samples\js\sample.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\samples\js\sf.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\samples\old\assets\posteddata.php" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\samples\old\assets\uilanguages\languages.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\samples\old\dialog\assets\my_dialog.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\samples\old\sample.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\samples\old\sample_posteddata.php" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\samples\toolbarconfigurator\font\fontello.svg" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\samples\toolbarconfigurator\js\abstracttoolbarmodifier.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\samples\toolbarconfigurator\js\fulltoolbareditor.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\samples\toolbarconfigurator\js\toolbarmodifier.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\samples\toolbarconfigurator\js\toolbartextmodifier.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\samples\toolbarconfigurator\lib\codemirror\codemirror.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\samples\toolbarconfigurator\lib\codemirror\javascript.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\samples\toolbarconfigurator\lib\codemirror\LICENSE" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\samples\toolbarconfigurator\lib\codemirror\show-hint.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\skins\moono-lisa\readme.md" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\styles.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ckeditor\vendor\promise.js" />
-    <None Include="wwwroot\Admin\assets\plugins\dropzone\dropzone.js" />
-    <None Include="wwwroot\Admin\assets\plugins\editable-table\mindmup-editabletable.js" />
-    <None Include="wwwroot\Admin\assets\plugins\gmaps\gmaps.js" />
-    <None Include="wwwroot\Admin\assets\plugins\ion-rangeslider\js\ion.rangeSlider.js" />
-    <None Include="wwwroot\Admin\assets\plugins\jquery-datatable\buttons\buttons.bootstrap4.min.js" />
-    <None Include="wwwroot\Admin\assets\plugins\jquery-datatable\buttons\buttons.colVis.min.js" />
-    <None Include="wwwroot\Admin\assets\plugins\jquery-datatable\buttons\buttons.flash.min.js" />
-    <None Include="wwwroot\Admin\assets\plugins\jquery-datatable\buttons\buttons.html5.min.js" />
-    <None Include="wwwroot\Admin\assets\plugins\jquery-datatable\buttons\buttons.print.min.js" />
-    <None Include="wwwroot\Admin\assets\plugins\jquery-datatable\buttons\dataTables.buttons.min.js" />
-    <None Include="wwwroot\Admin\assets\plugins\jquery-inputmask\jquery.inputmask.bundle.js" />
-    <None Include="wwwroot\Admin\assets\plugins\jquery-knob\jquery.knob.min.js" />
-    <None Include="wwwroot\Admin\assets\plugins\jquery-sparkline\jquery.sparkline.js" />
-    <None Include="wwwroot\Admin\assets\plugins\jquery-spinner\js\jquery.spinner.js" />
-    <None Include="wwwroot\Admin\assets\plugins\jquery-steps\jquery.steps.js" />
-    <None Include="wwwroot\Admin\assets\plugins\jquery-validation\jquery.validate.js" />
-    <None Include="wwwroot\Admin\assets\plugins\jvectormap\jquery-jvectormap-au-mill.js" />
-    <None Include="wwwroot\Admin\assets\plugins\jvectormap\jquery-jvectormap-in-mill.js" />
-    <None Include="wwwroot\Admin\assets\plugins\jvectormap\jquery-jvectormap-uk-mill-en.js" />
-    <None Include="wwwroot\Admin\assets\plugins\jvectormap\jquery-jvectormap-us-aea-en.js" />
-    <None Include="wwwroot\Admin\assets\plugins\light-gallery\fonts\lgd641.svg" />
-    <None Include="wwwroot\Admin\assets\plugins\light-gallery\js\lightgallery-all.min.js" />
-    <None Include="wwwroot\Admin\assets\plugins\momentjs\moment.js" />
-    <None Include="wwwroot\Admin\assets\plugins\multi-select\js\jquery.multi-select.js" />
-    <None Include="wwwroot\Admin\assets\plugins\nestable\jquery.nestable.js" />
-    <None Include="wwwroot\Admin\assets\plugins\nouislider\nouislider.js" />
-    <None Include="wwwroot\Admin\assets\plugins\sweetalert\sweetalert.min.js" />
     <None Include="wwwroot\fonts\IranianSans\Fontyab.com.url" />
     <None Include="wwwroot\fonts\IranianSans\Fontyab.ir.url" />
     <None Include="wwwroot\fonts\iranyekan_fa\svg\iranyekanwebbold%28fanum%29.svg" />
@@ -242,6 +106,7 @@
     <None Include="wwwroot\js\jquery.isotope.js" />
     <None Include="wwwroot\js\jquery.js" />
     <None Include="wwwroot\js\jquery.min.js" />
+    <None Include="wwwroot\js\libscripts.bundle.js" />
     <None Include="wwwroot\js\respond-1.1.0.min.js" />
     <None Include="wwwroot\js\wow.js" />
     <None Include="wwwroot\UserPanel\.git\COMMIT_EDITMSG" />
